<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="about">About</string>
    <string name="about_me">About</string>
    <string name="about_section_too_long">Please keep things under 160 characters</string>
    <string name="about_this_pin">About This Pin</string>
    <string name="about_this_promoted_pin">"This Pin is from %1$s. It's showing up here because %1$s paid to have it placed where you'd be more likely to notice it."</string>
    <string name="about_this_rec_pin_board">This Pin is from a board that has some of the same Pins as your &lt;b>%1$s&lt;/b> board.</string>
    <string name="about_this_rec_pin_other">"This Pin was picked for you based on Pins you've added and sites you've visited."</string>
    <string name="about_you">About you</string>
    <string name="accept">Accept</string>
    <string name="accept_invite">Accept invite…</string>
    <string name="accept_invite_msg">Accepting this invite will add this board to your profile.</string>
    <string name="accept_invite_title">Accept invite?</string>
    <string name="accept_invite_toast">"Lovely! You're ready to Pin to this board."</string>
    <string name="accept_or_decline">Accept or Decline</string>
    <string name="access_boards_offline">Access boards offline</string>
    <string name="account">Account</string>
    <string name="account_settings">Edit settings</string>
    <string name="activity">Activity</string>
    <string name="add">Add</string>
    <string name="add_a_map">Add a map?</string>
    <string name="add_message">Add Message</string>
    <string name="add_more_people">Add people to board</string>
    <string name="add_site">Add your website</string>
    <string name="add_your_impressum">Add your Imprint</string>
    <string name="added">Added</string>
    <string name="address">Address</string>
    <string name="against_policies">Against Our Policies</string>
    <string name="all">Everything</string>
    <string name="all_boards">All boards</string>
    <string name="all_categories">All categories</string>
    <string name="all_over_pinterest">Here are Pins from all over Pinterest.</string>
    <string name="all_pins">All Pins</string>
    <string name="all_text">All %s</string>
    <string name="allow_members_to_invite">Members can invite others</string>
    <string name="almost_there">Almost there!</string>
    <string name="already_have_account">Already have account?</string>
    <string name="also_get_email_when">Also get an email when someone</string>
    <string name="business_name">Business name</string>
    <string name="clear_recent_search">Clear recent searches</string>
    <string name="comments_your_pin">Comments on your Pin</string>
    <string name="contextmenu_pinit">Pin it</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="continue_gplus">Continue with Google</string>
    <string name="create_pin">Add a Pin</string>
    <string name="creative_ideas">Save creative ideas for any project or interest</string>
    <string name="deactivate_account_message">I accidentally made another account</string>
    <string name="deactivate_break_message">"I'll be back. I'm just taking a break!"</string>
    <string name="deactivate_business_message">I want a business account</string>
    <string name="deactivate_emails_message">"I'm getting too many emails"</string>
    <string name="deactivate_hacked_message">My account was hacked</string>
    <string name="deactivate_my_account">Deactivate my account</string>
    <string name="deactivate_other_message">Other</string>
    <string name="deactivate_pins_message">"I can't find interesting Pins"</string>
    <string name="deactivate_privacy_message">I have a privacy concern</string>
    <string name="deactivate_tell_why_leaving_title">"Tell us why you're leaving"</string>
    <string name="deactivate_understand_message">"I don't understand Pinterest"</string>
    <string name="deactivate_use_message">"I don't use or like Pinterest"</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_notifications">Email notifications</string>
    <string name="facebook">Facebook</string>
    <string name="feature_announcements_updates">Feature announcements and updates</string>
    <string name="find_friends">Find friends</string>
    <string name="follows_your_boards">Follows you or your boards</string>
    <string name="general_settings">General</string>
    <string name="get_email_notifications">Get email notifications</string>
    <string name="get_email_when_someone">Get an email when someone:</string>
    <string name="google">Google</string>
    <string name="help_us_understand_problem">Help us understand the problem</string>
    <string name="invitation_feedback">Invitations to give us feedback</string>
    <string name="invites_you_to_group_board">Invites you to a group board</string>
    <string name="joins_from_other_social_networks">From your other social networks joins Pinterest</string>
    <string name="like">Like</string>
    <string name="likes_your_pin">Likes your Pin</string>
    <string name="login_alternative">Already on Pinterest? <b>LOG IN</b></string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_gplus">Log in with Google</string>
    <string name="login_with_rakuten">Log in with Rakuten</string>
    <string name="login_with_twitter">Log in with Twitter</string>
    <string name="logout">Log out</string>
    <string name="mobile_notifications">Push notifications</string>
    <string name="more">More…</string>
    <string name="nearby_notifications">Nearby notifications</string>
    <string name="news_privacy">News activity privacy</string>
    <string name="not_interested_in_this_pin">"It wasn't interesting"</string>
    <string name="offensive_pin">"It's offensive"</string>
    <string name="other_kinds_of_emails">Other kinds of emails you can get</string>
    <string name="password">Password</string>
    <string name="permanently_close_my_account">Permanently close my account</string>
    <string name="personalization">Personalization</string>
    <string name="price_changes_for_pin">Price changes for Pins you add</string>
    <string name="rakuten">Rakuten</string>
    <string name="repins_your_pin">Pins your Pin</string>
    <string name="search_privacy">Search engine privacy</string>
    <string name="seen_before_pin">"I've already seen it"</string>
    <string name="select_business_type">Select a business type</string>
    <string name="send">Send</string>
    <string name="send_these_emails">Send these emails</string>
    <string name="sends_you_pin">Sends you a Pin</string>
    <string name="share">Share…</string>
    <string name="signup">Sign Up</string>
    <string name="signup_create_account">Create Account</string>
    <string name="store_your_contacts">Store your contacts on Pinterest</string>
    <string name="stuff_you_might_like">Stuff you might like</string>
    <string name="support">Get help</string>
    <string name="terms_and_privacy">Terms of service and privacy policy</string>
    <string name="terms_and_privacy_business">"Pinterest's Business Terms of Service and Privacy Policy"</string>
    <string name="tos">Terms and privacy</string>
    <string name="twitter">Twitter</string>
    <string name="website_optional">Website (optional)</string>
    <string name="weekly_inspiration">Weekly inspiration</string>
    <string name="why_did_you_hide_this_pin">Why did you hide this Pin?</string>
</resources>