<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_create" android:id="@id/menu_create" android:title="@string/create_pin" app:showAsAction="always" />
    <item android:id="@id/menu_settings" android:title="@string/account_settings" app:showAsAction="never" />
    <item android:id="@id/menu_find_friends" android:title="@string/find_friends" app:showAsAction="never" />
    <item android:id="@id/menu_support" android:title="@string/support" app:showAsAction="never" />
    <item android:id="@id/menu_tos" android:title="@string/tos" app:showAsAction="never" />
    <item android:id="@id/menu_logout" android:title="@string/logout" app:showAsAction="never" />
</menu>