<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_edit" android:id="@id/menu_edit" android:title="@string/edit" app:showAsAction="always" />
    <item android:icon="@drawable/ic_like" android:id="@id/menu_like" android:title="@string/like" app:showAsAction="always" />
    <item android:icon="@drawable/ic_send" android:id="@id/menu_send" android:title="@string/send" app:showAsAction="always" />
    <item android:icon="@drawable/ic_share" android:id="@id/menu_share" android:title="@string/share" app:showAsAction="always" />
    <item android:icon="@drawable/ic_overflow" android:id="@id/menu_pin_overflow" android:title="@string/more" app:showAsAction="always" />
    <item android:id="@id/menu_pinit" android:title="@string/contextmenu_pinit" app:showAsAction="always" app:actionLayout="@layout/view_pin_sub_actionbar_pin_it" />
</menu>