<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/settings_rakuten_lbl" android:visibility="gone" android:text="@string/rakuten" style="@style/profile_about_section_title" />
    <LinearLayout android:id="@id/settings_rakuten_container" android:visibility="gone" style="@style/settings_section">
        <CheckedTextView android:id="@id/settings_rakuten_cb" android:background="@drawable/touch_clear_bg" android:text="@string/login_with_rakuten" style="@style/section_item_checkbox" />
    </LinearLayout>
    <TextView android:text="@string/facebook" style="@style/profile_about_section_title" />
    <LinearLayout style="@style/settings_section">
        <CheckedTextView android:id="@id/settings_fb_cb" android:background="@drawable/touch_clear_bg" android:text="@string/login_with_facebook" style="@style/section_item_checkbox" />
    </LinearLayout>
    <TextView android:id="@id/google_tv" android:text="@string/google" style="@style/profile_about_section_title" />
    <LinearLayout android:id="@id/google_container" style="@style/settings_section">
        <CheckedTextView android:id="@id/settings_gplus_cb" android:background="@drawable/touch_clear_bg" android:text="@string/login_with_gplus" style="@style/section_item_checkbox" />
    </LinearLayout>
    <TextView android:text="@string/twitter" style="@style/profile_about_section_title" />
    <LinearLayout style="@style/settings_section">
        <CheckedTextView android:id="@id/settings_twitter_cb" android:background="@drawable/touch_clear_bg" android:text="@string/login_with_twitter" style="@style/section_item_checkbox" />
    </LinearLayout>
</merge>