<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" style="@style/promoted_pin_cell_padding_row_header">
        <TextView android:layout_marginBottom="10.0dip" android:text="@string/help_us_understand_problem" style="@style/dialog_title" />
        <TextView android:id="@id/message" android:text="@string/why_did_you_hide_this_pin" style="@style/fullline_view" />
    </LinearLayout>
    <View style="@style/section_item_divider" />
    <TextView android:id="@id/not_interested" android:text="@string/not_interested_in_this_pin" style="@style/promoted_pin_cell_padding_row" />
    <View style="@style/section_item_divider" />
    <TextView android:id="@id/offensive" android:text="@string/offensive_pin" style="@style/promoted_pin_cell_padding_row" />
    <View style="@style/section_item_divider" />
    <TextView android:id="@id/seen_before" android:text="@string/seen_before_pin" style="@style/promoted_pin_cell_padding_row" />
</LinearLayout>