<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/general_settings" style="@style/profile_about_section_title" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/card_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/settings_push_notif" android:background="@drawable/touch_clear_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/mobile_notifications" style="@style/section_item_label" />
        <View style="@style/section_item_divider" />
        <TextView android:id="@id/settings_email_notif" android:background="@drawable/touch_clear_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/email_notifications" style="@style/section_item_label" />
        <View style="@style/section_item_divider" />
        <CheckedTextView android:id="@id/nearby_cb" android:background="@drawable/touch_clear_bg" android:text="@string/nearby_notifications" style="@style/section_item_checkbox" />
        <View style="@style/section_item_divider" />
        <TextView android:id="@id/clear_recent_search_btn" android:background="@drawable/touch_clear_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/clear_recent_search" style="@style/section_item_label" />
        <View style="@style/section_item_divider" />
        <TextView android:id="@id/settings_search_privacy_btn" android:background="@drawable/touch_clear_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/search_privacy" style="@style/section_item_label" />
        <View style="@style/section_item_divider" />
        <TextView android:id="@id/news_privacy_btn" android:background="@drawable/touch_clear_bg" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/news_privacy" style="@style/section_item_label" />
        <View android:visibility="gone" style="@style/section_item_divider" />
        <TextView android:id="@id/settings_personalized_recommendations_btn" android:background="@drawable/touch_clear_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/personalization" style="@style/section_item_label" />
        <View style="@style/section_item_divider" />
        <CheckedTextView android:id="@id/settings_store_contacts" android:background="@drawable/touch_clear_bg" android:text="@string/store_your_contacts" style="@style/section_item_checkbox" />
        <View style="@style/section_item_divider" />
        <TextView android:id="@id/settings_offline_boards" android:background="@drawable/touch_clear_bg" android:layout_width="fill_parent" android:layout_height="@dimen/list_cell_compact_height" android:text="@string/access_boards_offline" style="@style/section_item_label" />
    </LinearLayout>
</merge>