<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/normal_signup_wrapper" android:background="@color/white" android:weightSum="1.0" style="@style/fullline_view"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_display_small" android:textStyle="bold" android:textColor="@color/text_dark" android:gravity="center_horizontal" android:paddingLeft="@dimen/margin_double" android:paddingRight="@dimen/margin_double" android:paddingBottom="@dimen/margin_double" android:text="@string/creative_ideas" style="@style/fullline_view" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/normal_signup_buttons_wrapper" style="@style/fullline_view">
        <Button android:id="@id/signup_bt" android:layout_marginBottom="@dimen/margin_quarter" android:text="@string/signup" style="@style/button_red_full" />
        <Button android:id="@id/facebook" android:layout_marginBottom="@dimen/margin_quarter" android:text="@string/continue_facebook" style="@style/button_facebook_full" />
        <Button android:id="@id/gplus" android:layout_marginBottom="@dimen/margin_quarter" android:text="@string/continue_gplus" style="@style/button_gplus_full" />
    </LinearLayout>
    <TextView android:textColor="@color/text_brio_dark" android:gravity="center" android:id="@id/terms_tv" android:layout_width="@dimen/signup_button_width" android:layout_marginLeft="@dimen/margin_double" android:layout_marginTop="@dimen/margin_half" android:layout_marginRight="@dimen/margin_double" android:layout_marginBottom="@dimen/margin" android:text="@string/terms_and_privacy" android:maxLines="3" android:singleLine="false" style="@style/text_subtitle" />
    <Button android:id="@id/login_bt" android:text="@string/login_alternative" android:textAllCaps="false" style="@style/button_light_gray_full" />
</LinearLayout>